--- a/api/package.json
+++ b/api/package.json
@@ -19,8 +19,12 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
+    "ioredis": "^4.19.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "node-fetch": "2.6.1",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   },
