--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
-    "node-fetch": "2.6.1",
+    "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   },
